Fix accessibility issues

--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -25,7 +25,7 @@
       <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 island-quarter">
         <div class="product-img" aria-label="Image of product in cart">
           <i class="icon i-64">
-            <img class="img-flex" src="../../images/img-1.jpg">
+            <img class="img-flex" src="../../images/img-1.jpg" alt="" aria-label="Image of girl in a white sweater">
           </i>
         </div>
       </div>
