--- a/patterns/sections/toggle-section.html
+++ b/patterns/sections/toggle-section.html
@@ -24,16 +24,16 @@
         <div class="name1 push-1-2">
           <label class="sa kilo" for="name1">Full Name</label>
           <div class="name1 push-1-2">
-            <input class="milli" id="name1" required aria-describedby="name-error" placeholder="Jane Smith">
+            <input class="milli" id="name1" required placeholder="Jane Smith">
           </div>
         </div>
         <div class="address1 push-1-2">
           <label for="address1">Address</label>
-          <input id="address1" required aria-describedby="address-error">
+          <input id="address1" required>
         </div>
         <div class="address2 push-1-2">
           <label for="address2">Address</label>
-          <input id="address2" required aria-describedby="address-error">
+          <input id="address2" required>
         </div>
 
         <div class="grid">
@@ -41,7 +41,7 @@
             <div class="name2 push-1-2">
               <label class="sa kilo" for="name2">Full Name</label>
               <div class="name2 push-1-2">
-                <input class="milli" id="name1" required aria-describedby="name-error" placeholder="Jane Smith">
+                <input class="milli" id="name2" required placeholder="Jane Smith">
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
 
         <div class="zip-code push-1-2">
           <label for="zip">ZIP Code</label>
-          <input type="text" id="zip" placeholder="K2K 3E4" required aria-describedby="zip-error">
+          <input type="text" id="zip" placeholder="K2K 3E4">
         </div>
 
       </form>
