Fix indentation issues

--- a/patterns/forms/name.html
+++ b/patterns/forms/name.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Checkbox</title>
+  <title>Name</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -18,12 +18,12 @@
   <form>
     <label class="sa kilo" for="name">Full Name</label>
     <div class="name push-1-2">
-    <input class="milli" id="name" required aria-describedby="name-error" placeholder="Jane Smith">
-    <p class="error-message milli island-1-4 push-0" id="agree-error">
-      <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
-      <span class="icon-label">Please enter full name</span>
-    </p>
-  </div>
+      <input class="milli" id="name" required placeholder="Jane Smith">
+      <p class="error-message milli island-1-4 push-0" id="agree-error">
+        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
+        <span class="icon-label">Please enter full name</span>
+      </p>
+    </div>
   </form>
 
 </body>
