--- a/patterns/forms/phone-number.html
+++ b/patterns/forms/phone-number.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Number</title>
+  <title>Phone Number</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -18,13 +18,13 @@
 
   <form>
     <div class="number push-1-2">
-    <label for="tel">Phone no.</label>
-    <input type="tel" id="tel" required aria-describedby="tel-error">
-    <p class="error-message milli island-1-4 push-0" id="tel-error">
-      <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
-      <span class="icon-label">Enter phone number without space.</span>
-    </p>
-  </div>
+      <label for="tel">Phone no.</label>
+      <input type="tel" id="tel" required aria-describedby="tel-error">
+      <p class="error-message milli island-1-4 push-0" id="tel-error">
+        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
+        <span class="icon-label">Enter phone number without space.</span>
+      </p>
+    </div>
   </form>
 
 </body>
