--- a/pages/product-list-page.html
+++ b/pages/product-list-page.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <main class="main" role="main" id="main">
   <script type="application/json" data-pattern="header/header">
     {
       ".current[class]": "tera text-center yellow"
