--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -15,7 +15,12 @@
 
 <body>
 
-  <main class="header clearfix">
+  <div class="header clearfix">
+    <ul class="skip-links">
+      <li><a href="#nav">Skip to navigation</a></li>
+      <li><a href="#main">Skip to main</a></li>
+    </ul>
+
     <div class="logo left">
       <a class="inline-block" href="home.html">
         <img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
@@ -32,13 +37,13 @@
           <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for men's clothing" class="tera text-center yellow" href="product-list-page.html#men">Men</a></li>
           <li class="list-group-item text-center pad-top-half"><a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="product-list-page.html#genderbender">Gender Bender</a></li>
-          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="tera text-center yellow" href="checkout-form.html">Cart</a></li>
+          <li class="list-group-item text-center pad-top-half"><a aria-label="Click to go to the cart" class="cart tera text-center yellow" href="checkout-form.html">Cart</a></li>
 
         </ul>
       </nav>
     </div>
 
-  </main>
+  </div>
 
 </body>
 
