--- a/index.html
+++ b/index.html
@@ -2435,7 +2435,12 @@ Use the header pattern on all pages.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="header-header-code-sample-copy-chunk">&lt;main class="header clearfix"&gt;
+              <code><pre id="header-header-code-sample-copy-chunk">&lt;div class="header clearfix"&gt;
+  &lt;ul class="skip-links">
+    &lt;li>&lt;a href="#nav">Skip to navigation&lt;/a>&lt;/li>
+    &lt;li>&lt;a href="#main">Skip to main&lt;/a>&lt;/li>
+  &lt;/ul>
+
   &lt;div class="logo left">
     &lt;a class="inline-block" href="home.html">
         &lt;img class="island main-logo" src="../../images/logo-64.svg" aria-label="Logo of the brand" alt="">
@@ -2452,13 +2457,13 @@ Use the header pattern on all pages.</p>
         &lt;li class="list-group-item text-center pad-t-1-2">&lt;a aria-label="Click for women&apos;s clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women&lt;/a>&lt;/li>
         &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click for men&apos;s clothing" class="tera text-center yellow" href="product-list-page.html#men">Men&lt;/a>&lt;/li>
         &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click for gender neutral clothing" class="tera text-center yellow" href="product-list-page.html#genderbender">Gender Bender&lt;/a>&lt;/li>
-        &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click to go to the cart" class="tera text-center yellow" href="checkout-form.html">Cart&lt;/a>&lt;/li>
+        &lt;li class="list-group-item text-center pad-top-half">&lt;a aria-label="Click to go to the cart" class="cart tera text-center yellow" href="checkout-form.html">Cart&lt;/a>&lt;/li>
 
       &lt;/ul>
     &lt;/nav>
   &lt;/div>
 
-&lt;/main>
+&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -3264,22 +3269,29 @@ Can be used in the footer.</p>
                 </i>
               </button>
               <code><pre id="sections-products-code-sample-copy-chunk">&lt;div class="products-cart relative"&gt;
+
   &lt;input type="checkbox" class="cart-product" id="cart-product-close">
-  &lt;label class="cart-product-label island-half absolute pin-cr" for="cart-product-close">
+  &lt;label class="cart-product-label absolute pin-cr" for="cart-product-close">
     &lt;svg class="i-16 close-icon">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
   &lt;/label>
-  &lt;div class="cart">
-    &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 island-quarter">
-      &lt;div class="product-img" aria-label="Image of product in cart">
-        &lt;i class="icon i-64">
+  &lt;div class="grid">
+    &lt;div class="unit xs-1-3 s-1-3 m-1-3 l-1-3">
+      &lt;div class="cart">
+        &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 island-quarter gutter-quarter text-center">
+          &lt;div class="product-img" aria-label="Image of product in cart">
+            &lt;i class="icon i-64">
             &lt;img class="img-flex" src="../../images/img-1.jpg" alt="" aria-label="Image of girl in a white sweater">
           &lt;/i>
+          &lt;/div>
+        &lt;/div>
       &lt;/div>
     &lt;/div>
-    &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 island-quarter">
-      &lt;p class="push-0 milli">VANILLA SWEATER&lt;/p>
-      &lt;label class="milli" for="number">&lt;/label>
-      &lt;input type="number" id="number" required>
+    &lt;div class="unit xs-1-3 s-1-3 m-1-3 l-1-3">
+      &lt;div class="unit xs-1 s-1 m-1-2 l-1-2 island-quarter">
+        &lt;p class="push-0 milli">VANILLA SWEATER&lt;/p>
+        &lt;label class="milli" for="number">&lt;/label>
+        &lt;input type="number" id="number" required>
+      &lt;/div>
     &lt;/div>
   &lt;/div>
 &lt;/div>
@@ -3613,7 +3625,7 @@ Can be used in the footer.</p>
           &lt;/div>
         &lt;/div>
 
-        &lt;div class="unit xs-1 s-1 m-1-2 l-1-2">
+        &lt;div class="unit xs-1 s-1 m-1 l-1-2 push-1-2">
           &lt;div class="drop-down-style">
             &lt;label for="drop-down">Drop Down List&lt;/label>
             &lt;select class="drop-down" name="text" id="drop-down" aria-describedby="drop-down-error">
