--- a/pages/home.html
+++ b/pages/home.html
@@ -7,15 +7,17 @@
   <script src="../common/patternbot.js"></script>
 </head>
 <body>
-  <script type="application/json" data-pattern="banners/pop-up-banner"></script>
-  <script type="application/json" data-pattern="header/header">
-    {
-      ".current[class]": "tera text-center yellow"
-    }
-  </script>
-  <script type="application/json" data-pattern="banners/main-banners"></script>
-  <script type="application/json" data-pattern="sections/collection"></script>
-  <script type="application/json" data-pattern="footer/main-footer"></script>
+    <script type="application/json" data-pattern="banners/pop-up-banner"></script>
+    <main class="main" role="main" id="main">
+    <script type="application/json" data-pattern="header/header">
+      {
+        ".current[class]": "tera text-center yellow"
+      }
+    </script>
+    <script type="application/json" data-pattern="banners/main-banners"></script>
+    <script type="application/json" data-pattern="sections/collection"></script>
+    <script type="application/json" data-pattern="footer/main-footer"></script>
+  </main>
 
 </body>
 </html>
