--- a/patterns/sections/toggle-section.html
+++ b/patterns/sections/toggle-section.html
@@ -46,7 +46,7 @@
             </div>
           </div>
 
-          <div class="unit xs-1 s-1 m-1-2 l-1-2">
+          <div class="unit xs-1 s-1 m-1 l-1-2 push-1-2">
             <div class="drop-down-style">
               <label for="drop-down">Drop Down List</label>
               <select class="drop-down" name="text" id="drop-down" aria-describedby="drop-down-error">
