Add ARIA tags to images and icons
ARIA labels was added to images and icons

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
               <code><pre id="banners-pop-up-banner-code-sample-copy-chunk">&lt;div class="pop-up-banner"&gt;
   &lt;input type="checkbox" class="pop-up" id="pop-up-close">
   &lt;label class="pop-up-label island-half absolute pin-tr" for="pop-up-close">
-    &lt;svg class="i-16 close-icon">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
+    &lt;svg class="i-16 close-icon" aria-label="Close Icon">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
   &lt;/label>
   &lt;div class="sale-banner">
     &lt;p class="island-half text-center milli push-none">CLEARANCE SALE 40% OFF OF SWEATERS&lt;/p>
@@ -1349,13 +1349,13 @@ Use the footer pattern on all pages.</p>
   &lt;/div>
   &lt;div class="social-media-icons text-center">
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#instagram" aria-label="Instagram icon" />&lt;/svg>
+      &lt;svg class="i-32 open" aria-label="Instgram icon">&lt;use xlink:href="../../images/icons.svg#instagram" aria-label="Instagram icon" />&lt;/svg>
     &lt;/a>
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#twitter" aria-label="Twitter icon" />&lt;/svg>
+      &lt;svg class="i-32 open" aria-label="Twitter icon">&lt;use xlink:href="../../images/icons.svg#twitter" aria-label="Twitter icon" />&lt;/svg>
     &lt;/a>
     &lt;a href="#">
-      &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#fb" aria-label="Facebook icon" />&lt;/svg>
+      &lt;svg class="i-32 open" aria-label="Facebook icon">&lt;use xlink:href="../../images/icons.svg#fb" aria-label="Facebook icon" />&lt;/svg>
     &lt;/a>
   &lt;/div>
   &lt;div class="copyright">
@@ -2451,7 +2451,7 @@ Use the header pattern on all pages.</p>
       &lt;input type="checkbox" class="nav-check" id="nav-check">
       &lt;label class="nav-label gutter pad-t-2 right" for="nav-check">
         &lt;svg class="i-32 open">&lt;use xlink:href="../../images/icons.svg#togglenav" aria-label="Toggle navigation icon" />&lt;/svg>
-        &lt;svg class="i-32 close">&lt;use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" />&lt;/svg>
+        &lt;svg class="i-32 close" aria-label="Toggle Hamburger icon">&lt;use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" />&lt;/svg>
       &lt;/label>
       &lt;ul class="nav list-group island">
         &lt;li class="list-group-item text-center pad-t-1-2">&lt;a aria-label="Click for women&apos;s clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women&lt;/a>&lt;/li>
@@ -3272,7 +3272,7 @@ Can be used in the footer.</p>
 
   &lt;input type="checkbox" class="cart-product" id="cart-product-close">
   &lt;label class="cart-product-label absolute pin-cr" for="cart-product-close">
-    &lt;svg class="i-16 close-icon">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
+    &lt;svg class="i-16 close-icon" aria-label="Close icon">&lt;use xlink:href="../../images/icons.svg#close" />&lt;/svg>
   &lt;/label>
   &lt;div class="grid">
     &lt;div class="unit xs-1-3 s-1-3 m-1-3 l-1-3">
