--- a/patterns/footer/main-footer.html
+++ b/patterns/footer/main-footer.html
@@ -38,13 +38,13 @@
     </div>
     <div class="social-media-icons text-center">
       <a href="#">
-        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#instagram" aria-label="Instagram icon" /></svg>
+        <svg class="i-32 open" aria-label="Instgram icon"><use xlink:href="../../images/icons.svg#instagram" aria-label="Instagram icon" /></svg>
       </a>
       <a href="#">
-        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#twitter" aria-label="Twitter icon" /></svg>
+        <svg class="i-32 open" aria-label="Twitter icon"><use xlink:href="../../images/icons.svg#twitter" aria-label="Twitter icon" /></svg>
       </a>
       <a href="#">
-        <svg class="i-32 open"><use xlink:href="../../images/icons.svg#fb" aria-label="Facebook icon" /></svg>
+        <svg class="i-32 open" aria-label="Facebook icon"><use xlink:href="../../images/icons.svg#fb" aria-label="Facebook icon" /></svg>
       </a>
     </div>
     <div class="copyright">
