--- a/patterns/banners/pop-up-banner.html
+++ b/patterns/banners/pop-up-banner.html
@@ -18,7 +18,7 @@
   <div class="pop-up-banner">
     <input type="checkbox" class="pop-up" id="pop-up-close">
     <label class="pop-up-label island-half absolute pin-tr" for="pop-up-close">
-      <svg class="i-16 close-icon"><use xlink:href="../../images/icons.svg#close" /></svg>
+      <svg class="i-16 close-icon" aria-label="Close Icon"><use xlink:href="../../images/icons.svg#close" /></svg>
     </label>
     <div class="sale-banner">
       <p class="island-half text-center milli push-none">CLEARANCE SALE 40% OFF OF SWEATERS</p>
