--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -31,7 +31,7 @@
         <input type="checkbox" class="nav-check" id="nav-check">
         <label class="nav-label gutter pad-t-2 right" for="nav-check">
           <svg class="i-32 open"><use xlink:href="../../images/icons.svg#togglenav" aria-label="Toggle navigation icon" /></svg>
-          <svg class="i-32 close"><use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" /></svg>
+          <svg class="i-32 close" aria-label="Toggle Hamburger icon"><use xlink:href="../../images/icons.svg#close" aria-label="Toggle navigation close icon" /></svg>
         </label>
         <ul class="nav list-group island">
           <li class="list-group-item text-center pad-t-1-2"><a aria-label="Click for women's clothing" class="tera text-center yellow current" href="product-list-page.html#women">Women</a></li>
