--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -20,7 +20,7 @@
 
     <input type="checkbox" class="cart-product" id="cart-product-close">
     <label class="cart-product-label absolute pin-cr" for="cart-product-close">
-      <svg class="i-16 close-icon"><use xlink:href="../../images/icons.svg#close" /></svg>
+      <svg class="i-16 close-icon" aria-label="Close icon"><use xlink:href="../../images/icons.svg#close" /></svg>
     </label>
         <div class="grid">
   <div class="unit xs-1-3 s-1-3 m-1-3 l-1-3">
