Add Checkout button to product page
Checkout button was added to the product page

--- a/pages/product-details-page.html
+++ b/pages/product-details-page.html
@@ -32,8 +32,11 @@
               ".kilo[class]": "micro bold pad-top"
             }
           </script>
-          <div class="std-button push">
+          <div class="std-button push inline-block">
             <a class="btn micro bold" href="#">ADD TO CART</a>
+          </div>
+          <div class="std-button push inline-block">
+            <a class="btn micro bold" href="checkout-form.html">CHECKOUT</a>
           </div>
         </div>
         <script type="application/json" data-pattern="sections/reviews">
