Minor changes to make the website more functional
Checkout form:
The placeholder and labels for Shipping & Billing Address was changed.

Collection Section:
The collection was linked to the product list page to encourage browsing.

--- a/pages/checkout-form.html
+++ b/pages/checkout-form.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <h3 class="bold mega island push-none">CHECKOUT</h3>
+    <h3 class="bold mega gutter pad-top push-none">CHECKOUT</h3>
     <div class="grid">
 
       <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -61,7 +61,8 @@
           <div class="unit xs-1 s-1 m-1 l-1-2">
             <script type="application/json" data-pattern="forms/name">
               {
-                "label": "City"
+                "label": "City",
+                "input[placeholder]": "Ottawa"
               }
             </script>
 
@@ -89,6 +90,7 @@
             ".address-1 label": "Address line 1",
             ".address-2 label": "Address line 2",
             ".name2 label": "City",
+            ".name2 input[placeholder]": "Ottawa",
             ".drop-down option:first-child": "Alberta",
             ".drop-down option:nth-child(2)": "British Columbia",
             ".drop-down option:nth-child(3)": "Manitoba",
