--- a/index.html
+++ b/index.html
@@ -2836,22 +2836,24 @@ Can be used in the footer.</p>
                 </i>
               </button>
               <code><pre id="sections-collection-code-sample-copy-chunk">&lt;div class="collection-banner"&gt;
-  &lt;div class="relative">
-    &lt;h2 class="absolute collection-text">Cheese collection&lt;/h2>
-    &lt;div class="collection-img">
-      &lt;div class="grid">
-        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
-          &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
-        &lt;/div>
-        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
-          &lt;img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
-        &lt;/div>
-        &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
-          &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+  &lt;a href="product-list-page.html#women">
+    &lt;div class="relative">
+      &lt;h2 class="absolute collection-text">Cheese collection&lt;/h2>
+      &lt;div class="collection-img">
+        &lt;div class="grid">
+          &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
+            &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+          &lt;/div>
+          &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
+            &lt;img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
+          &lt;/div>
+          &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
+            &lt;img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+          &lt;/div>
         &lt;/div>
       &lt;/div>
     &lt;/div>
-  &lt;/div>
+  &lt;/a>
 &lt;/div>
 </pre></code>
             </div>
