--- a/patterns/sections/collection.html
+++ b/patterns/sections/collection.html
@@ -16,22 +16,24 @@
 <body>
 
   <div class="collection-banner">
-    <div class="relative">
-      <h2 class="absolute collection-text">Cheese collection</h2>
-      <div class="collection-img">
-        <div class="grid">
-          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
-            <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
-          </div>
-          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
-            <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
-          </div>
-          <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
-            <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+    <a href="product-list-page.html#women">
+      <div class="relative">
+        <h2 class="absolute collection-text">Cheese collection</h2>
+        <div class="collection-img">
+          <div class="grid">
+            <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top-double gutter-1-2">
+              <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+            </div>
+            <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-t-1-2 gutter-1-2">
+              <img class="img-flex" src="../../images/img-2.jpg" aria-label="Image of a girl in blue sweater" alt="">
+            </div>
+            <div class="unit xs-1 s-1 m-1-2 l-1-3 pad-top gutter-1-2">
+              <img class="img-flex" src="../../images/img-1.jpg" aria-label="Image of a girl in white sweater" alt="">
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </a>
   </div>
 
 </body>
