Form errors was added
Form errors were added for form usability and accessibility

--- a/patterns/forms/address.html
+++ b/patterns/forms/address.html
@@ -15,13 +15,21 @@
 </head>
 
 <body>
-  <form>
+  <form method="post" action="#" novalidate>
+
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="address push-1-2">
       <label for="address">Address</label>
       <input id="address" required aria-describedby="address-error">
       <p class="error-message milli island-1-4 push-0" id="address-error">
         <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
-        <span class="icon-label">Please provide a properly formatted email address</span>
+        <span class="icon-label">Please provide an address</span>
       </p>
     </div>
   </form>
