--- a/patterns/footer/subscribe-footer.html
+++ b/patterns/footer/subscribe-footer.html
@@ -17,7 +17,7 @@
 <body>
 
   <div class="subscribe">
-    <form>
+    <form class="inline-block">
       <div class="email">
         <label for="email">Email</label>
         <input type="email" id="email" required aria-describedby="email-error">
@@ -26,8 +26,10 @@
           <span class="icon-label">Please provide a properly formatted email address</span>
         </p>
       </div>
-      <button class="btn inline-block" type="submit">Subscribe</button>
     </form>
+    <div class="light-button island inline-block">
+      <a class="btn btn-light milli bold" href="#">Subscribe</a>
+    </div>
   </div>
 
 </body>
