--- a/patterns/forms/checkbox.html
+++ b/patterns/forms/checkbox.html
@@ -15,7 +15,14 @@
 </head>
 
 <body>
-  <form>
+  <form method="post" action="#" novalidate>
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="checkbox push-1-2">
       <input type="checkbox" id="agree" required aria-describedby="agree-error">
       <label class="sa kilo" for="agree">Checkbox</label>
