--- a/patterns/forms/date-picker.html
+++ b/patterns/forms/date-picker.html
@@ -16,7 +16,14 @@
 
 <body>
 
-  <form>
+  <form method="post" action="#" novalidate>
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="date-picker push-1-2">
       <label for="date">Date</label>
       <input type="date" id="date" required aria-describedby="date-error">
