--- a/patterns/forms/drop-down.html
+++ b/patterns/forms/drop-down.html
@@ -13,7 +13,14 @@
   <link href="forms.css" rel="stylesheet">
 </head>
 <body>
-  <form>
+  <form method="post" action="#" novalidate>
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="drop-down-style">
       <label for="drop-down">Drop Down List</label>
       <select class="drop-down" name="text" id="drop-down" aria-describedby="drop-down-error">
