--- a/patterns/forms/name.html
+++ b/patterns/forms/name.html
@@ -15,17 +15,25 @@
 </head>
 
 <body>
-  <form>
-    <label class="sa kilo" for="name">Full Name</label>
-    <div class="name push-1-2">
-      <input class="milli" id="name" required placeholder="Jane Smith">
-      <p class="error-message milli island-1-4 push-0" id="agree-error">
-        <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
-        <span class="icon-label">Please enter full name</span>
+  <form method="post" action="#" novalidate>
+
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
+    <div class="push-1-2">
+      <label for="name">Name</label>
+      <input id="name" required aria-describedby="name-error">
+      <p class="error-message milli island-1-4 push-0" id="name-error">
+        <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">Please provide a name</span>
       </p>
     </div>
-  </form>
 
+  </form>
 </body>
 
 </html>
