--- a/patterns/forms/phone-number.html
+++ b/patterns/forms/phone-number.html
@@ -16,7 +16,15 @@
 
 <body>
 
-  <form>
+  <form method="post" action="#" novalidate>
+
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="number push-1-2">
       <label for="tel">Phone no.</label>
       <input type="tel" id="tel" required aria-describedby="tel-error">
