--- a/patterns/forms/radio-button.html
+++ b/patterns/forms/radio-button.html
@@ -16,7 +16,15 @@
 
 <body>
 
-  <form>
+  <form method="post" action="#" novalidate>
+
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <fieldset class="radio-btn push-quarter">
       <legend class="kilo not-bold push-none">Radio Buttons</legend>
       <input type="radio" name="option" id="option-1" aria-describedby="radio-error" checked>
