--- a/patterns/forms/range.html
+++ b/patterns/forms/range.html
@@ -16,7 +16,15 @@
 
 <body>
 
-  <form>
+  <form method="post" action="#" novalidate>
+
+    <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+      <h3 class="push-0">
+        <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+        <span class="icon-label">There are items that require your attention</span>
+      </h3>
+    </div>
+
     <div class="range push-1-2">
       <input type="range" name="points" min="0" max="10" aria-describedby="range-error">
       <p class="error-message milli island-1-4 push-0" id="range-error">
