--- a/patterns/forms/zip-code.html
+++ b/patterns/forms/zip-code.html
@@ -15,6 +15,16 @@
 </head>
 
 <body>
+
+  <form method="post" action="#" novalidate>
+
+  <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+    <h3 class="push-0">
+      <i class="icon 1-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+      <span class="icon-label">There are items that require your attention</span>
+    </h3>
+  </div>
+
   <div class="zip-code push-1-2">
     <label for="zip">ZIP Code</label>
     <input type="text" id="zip" placeholder="K2K 3E4" required aria-describedby="zip-error">
@@ -23,5 +33,6 @@
       <span class="icon-label">Invalid ZIP code. ZIP format should be K2K 3E4.</span>
     </p>
   </div>
+</form>
 </body>
 </html>
