Fix indentation issues and icons

--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,7 @@ Use the footer pattern on all pages.</p>
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="footer-main-footer-code-sample-copy-chunk">&lt;div class="footer"&gt;
+              <code><pre id="footer-main-footer-code-sample-copy-chunk">&lt;div class="footer" role="contentinfo" id="footer"&gt;
   &lt;div class="links pad-t-2 push">
     &lt;ul class="list-group-inline island clearfix text-center">
       &lt;li class="gutter milli bold">
@@ -2444,9 +2444,9 @@ Use in payment gateways.</p>
 
   &lt;div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     &lt;h3 class="push-0">
-      &lt;i class="icon 1-32">&lt;svg>&lt;use xlink:href="images/icons.svg#error"/>&lt;/svg>&lt;/i>
-      &lt;span class="icon-label">There are items that require your attention&lt;/span>
-    &lt;/h3>
+        &lt;i class="icon 1-32">&lt;svg>&lt;use xlink:href="images/icons.svg#error"/>&lt;/svg>&lt;/i>
+        &lt;span class="icon-label">There are items that require your attention&lt;/span>
+      &lt;/h3>
   &lt;/div>
 
   &lt;div class="zip-code push-1-2">
@@ -3379,8 +3379,8 @@ Can be used in the footer.</p>
         &lt;div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 island-quarter gutter-quarter text-center">
           &lt;div class="product-img" aria-label="Image of product in cart">
             &lt;i class="icon i-64">
-            &lt;img class="img-flex" src="../../images/img-1.jpg" alt="" aria-label="Image of girl in a white sweater">
-          &lt;/i>
+                &lt;img class="img-flex" src="../../images/img-1.jpg" alt="" aria-label="Image of girl in a white sweater">
+              &lt;/i>
           &lt;/div>
         &lt;/div>
       &lt;/div>
