--- a/pages/product-list-page.html
+++ b/pages/product-list-page.html
@@ -10,22 +10,23 @@
 
 <body>
   <main class="main" role="main" id="main">
-  <script type="application/json" data-pattern="header/header">
-    {
-      ".current[class]": "tera text-center yellow"
-    }
-  </script>
-  <script type="application/json" data-pattern="sections/filter-section">
-    {
-      ".product-3 aria-label": "Image of a girl in an orange blouse",
-      ".product-4 aria-label": "Image of a guy in white sweater",
-      ".product-5 aria-label": "Image of a guy in white t-shirt",
-      ".product-6 aria-label": "Image of a girl in blue jeans",
-      ".product-7 aria-label": "Image of a round-neck geometric patterned shirt",
-      ".product-8 aria-label": "Image of a girl in a beige sweater",
-      ".product-9 aria-label": "Image of a girl in a striped sweater"
-    }
-  </script>
+    <script type="application/json" data-pattern="header/header">
+      {
+        ".current[class]": "tera text-center yellow"
+      }
+    </script>
+    <script type="application/json" data-pattern="sections/filter-section">
+      {
+        ".product-3 aria-label": "Image of a girl in an orange blouse",
+        ".product-4 aria-label": "Image of a guy in white sweater",
+        ".product-5 aria-label": "Image of a guy in white t-shirt",
+        ".product-6 aria-label": "Image of a girl in blue jeans",
+        ".product-7 aria-label": "Image of a round-neck geometric patterned shirt",
+        ".product-8 aria-label": "Image of a girl in a beige sweater",
+        ".product-9 aria-label": "Image of a girl in a striped sweater"
+      }
+    </script>
+  </main>
   <script type="application/json" data-pattern="footer/main-footer"></script>
 
 </body>
