--- a/patterns/footer/main-footer.html
+++ b/patterns/footer/main-footer.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="footer">
+  <div class="footer" role="contentinfo" id="footer">
     <div class="links pad-t-2 push">
       <ul class="list-group-inline island clearfix text-center">
         <li class="gutter milli bold">
