Browser testing fixes
The path for the images in pages requires the path for the page and not the path for thr original pattern. The copy of the pattern is created to build a page, and hence the link from the page and not the pattern is essential.

--- a/pages/checkout-form.html
+++ b/pages/checkout-form.html
@@ -144,7 +144,7 @@
         <script type="application/json" data-pattern="sections/products"></script>
         <script type="application/json" data-pattern="sections/products">
           {
-            ".product-img img[src]": "../../images/img-2.jpg",
+            ".product-img img[src]": "../images/img-2.jpg",
             ".products-cart p": "BLUE CHEESE SWEATER",
             "cart-product-close[id]": "cart-product-close2",
             "cart-product-close[for]": "cart-product-close2"
