--- a/pages/product-details-page.html
+++ b/pages/product-details-page.html
@@ -16,7 +16,7 @@
       <div class="unit xs-1 s-1 m-1 l-1-2 gutter-1-2 push">
         <script type="application/json" data-pattern="cards/image-cards">
           {
-            "img[src]": "../../images/img-8.jpg"
+            "img[src]": "../images/img-8.jpg"
           }
         </script>
       </div>
@@ -43,7 +43,7 @@
           {
             ".reviews[class]": "reviews push",
             ".zero-star use[xlink:href]": "../../images/icons.svg#full-review",
-            ".reviews .half-star use[xlink:href]": "../../images/icons.svg#full-review"
+            ".reviews .half-star use[xlink:href]": "../images/icons.svg#full-review"
           }
         </script>
         <script type="application/json" data-pattern="sections/basic-section"></script>
@@ -57,7 +57,7 @@
     </div>
     <script type="application/json" data-pattern="sections/recommended-section">
       {
-        "img[src]": "../../images/img-3.jpg"
+        "img[src]": "../images/img-3.jpg"
       }
     </script>
   </main>
