Image path changed

--- a/pages/product-details-page.html
+++ b/pages/product-details-page.html
@@ -42,7 +42,7 @@
         <script type="application/json" data-pattern="sections/reviews">
           {
             ".reviews[class]": "reviews push",
-            ".zero-star use[xlink:href]": "../../images/icons.svg#full-review",
+            ".zero-star use[xlink:href]": "../images/icons.svg#full-review",
             ".reviews .half-star use[xlink:href]": "../images/icons.svg#full-review"
           }
         </script>
