--- a/index.html
+++ b/index.html
@@ -840,11 +840,7 @@
   </div>
 
     <div class="pattern-desc milli island" >
-      <div class="max-length"><p>The banners help create a visual story and representation of the brand and the collections. There are multiple banner layouts and each serve a purpose</p>
-<p>Main Banner</p>
-<p>The main banners are to be used only in the homepage and helps create a visual impact for the brand and the website. It helps carry across the branding.</p>
-<p>Pop-Up Banner</p>
-<p>The pop-up banners are to be used only in the homepage to draw attention to important events, sales. It helps in increasing sales.</p>
+      <div class="max-length"><p>The banners help create a visual story and representation of the brand and the collections. They can be used to highlight main content of the brand, new collections, a way to draw the user&#39;s focus to the selling point of the brand.</p>
 </div>
     </div>
 
@@ -877,6 +873,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The main banners are to be used only in the homepage and helps create a visual impact for the brand and the website. It helps carry across the branding.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -946,6 +946,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The pop-up banners are to be used only in the homepage to draw attention to important events, sales. It helps in increasing sales.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1092,11 +1096,7 @@
   </div>
 
     <div class="pattern-desc milli island" >
-      <div class="max-length"><p>Cards are used to represent blocks of clickable contents. They can be basic cards, image cards, etc., It can be used to create f=dynamic layouts.</p>
-<ul>
-<li>Image cards can be used for visual storytelling. Use image cards for recommended, trending, social-media, product selection selections, urging the user to take action and follow the visual flow.</li>
-<li>Basic cards are used with a description and/or title. They can be used in product pages to provide a brief description pf the product.</li>
-</ul>
+      <div class="max-length"><p>Cards are used to represent blocks of grouped content that provide at-a-glance information. They can be basic cards, image cards, etc., It can be used to create dynamic layouts.</p>
 </div>
     </div>
 
@@ -1129,6 +1129,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Basic cards are used with a description and/or title. They can be used in product pages to provide a brief description pf the product.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1204,6 +1208,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>Image cards can be used for visual storytelling. Use image cards for recommended, trending, social-media, product selection selections, urging the user to take action and follow the visual flow.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1254,12 +1262,10 @@
       </nav>
   </div>
 
-      <div class="pattern-desc milli island" >
-        <div class="max-length"><p>The footer of a page consists of secondary navigation, details pertaining to the brand/e-commerce site. It can also contain a subscription field for newsletter, promotion for users to stay on top of sales, trends, etc.,
-It consists of secondary navigation and copyright notices.
-Use the footer pattern on all pages.</p>
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>Footer provides users with sitemap, social media links and copyright information.</p>
 </div>
-      </div>
+    </div>
 
   
 
@@ -1471,6 +1477,10 @@ Use the footer pattern on all pages.</p>
       </nav>
   </div>
 
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>Forms can be used for submitting data.</p>
+</div>
+    </div>
 
   
 
@@ -1501,6 +1511,10 @@ Use the footer pattern on all pages.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The address field can be used to obtain address details of the user. It is to be used in the checkout page for shipping and billing details.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1915,6 +1929,10 @@ It is generally used for account creation, log in, payment gateway access.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The name of the user can be stored by the website for account creation, shipping and delivery. Can be used in the checkout page and login details page.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1994,6 +2012,10 @@ It is generally used for account creation, log in, payment gateway access.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The number field in a form accepts only numbers and has increase/decrease button. Use for adding/removing items from cart.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2155,8 +2177,7 @@ Use password field when user is creating an account.</p>
             </ul>
         </div>
           <div class="pattern-desc milli island" style="">
-            <div class="max-length"><p>The number field in a form accepts only numbers and has an inbuilt increase and decrease function.
-Use for adding/removing items from cart.</p>
+            <div class="max-length"><p>The number field in a form accepts only numbers and can be used to call the help center on the device default phone application</p>
 </div>
           </div>
 
@@ -2238,7 +2259,7 @@ Use for adding/removing items from cart.</p>
             </ul>
         </div>
           <div class="pattern-desc milli island" style="">
-            <div class="max-length"><p>Radion button in a form can accept only binary inputs.
+            <div class="max-length"><p>Radio button in a form can accept only binary inputs.
 Use for agreeing to terms and conditions.</p>
 </div>
           </div>
@@ -2580,11 +2601,10 @@ Use the header pattern on all pages.</p>
       </nav>
   </div>
 
-      <div class="pattern-desc milli island" >
-        <div class="max-length"><p>Filter options to help with easy navigation and customization.
-It can be used in the product page, collections page to sort/filter brands, price, etc.,.</p>
+    <div class="pattern-desc milli island" >
+      <div class="max-length"><p>Secondary navigation library for the e-commerce website.</p>
 </div>
-      </div>
+    </div>
 
   
 
@@ -2788,27 +2808,10 @@ Can be used in the footer.</p>
       </nav>
   </div>
 
-    <div class="pattern-desc milli island" >
-      <div class="max-length"><p>Basic Section</p>
-<p>The basic section consists of a heading and a basic paragraph description. It can be used in product-details page for description, fabric care for clothes.</p>
-<p>Collection</p>
-<p>The collection sections weave a story for the viewers. A new collection, most trending collections can be communicated using this dynamic layout. Can be used on any page to represent collections, collaborations.</p>
-<p>Colour Picker</p>
-<p>The colour picker section consists of styled links. I can be used in the product details page for selecting a colour of the clothing wear.</p>
-<p>Filter Section</p>
-<p>The Products with filter section are to be used in the product page. It consists of product images, price and name. Filter options based on clothing type and brands are provided to help the user efficiently filter products.</p>
-<p>Products</p>
-<p>The Products sections is to be used in the checkout form page. It consists of the image, quantity and price of the clothing added to the cart, for final review, before checkout.</p>
-<p>Recommended Section</p>
-<p>The recommended section consists of image cards. It can be used in the product details page to display similar clothing.</p>
-<p>Reviews</p>
-<p>The reviews section consists of review stars for the clothing. Can be used in the product details section.</p>
-<p>Size Picker</p>
-<p>The size picker section consists of styled links. I can be used in the product details page for selecting a size of the clothing wear.</p>
-<p>Toggle Section</p>
-<p>The toggle section can be used for toggle display and hide. It can used in checkout form page.</p>
+      <div class="pattern-desc milli island" >
+        <div class="max-length"><p>The basic section consists of a heading and a basic paragraph description. It can be used in product-details page for description, fabric care for clothes.</p>
 </div>
-    </div>
+      </div>
 
   
 
@@ -2839,6 +2842,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The basic section consists of a heading and a basic paragraph description. It can be used in product-details page for description, fabric care for clothes.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2904,6 +2911,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The collection sections weave a story for the viewers. A new collection, most trending collection can be communicated using this dynamic layout. Can be used on any page to represent collections, collaborations, social media styling.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -2984,6 +2995,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The colour picker section consists of styled links. I can be used in the product details page for selecting a colour of the clothing wear.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3054,6 +3069,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The Products with filter section are to be used in the product page. It consists of product images, price and name. Filter options based on clothing type and brands are provided to help the user efficiently filter products. Helps with better and targeted access for users.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3339,6 +3358,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The Products sections is to be used in the checkout form page. It includes the final summary; image of the product, quantity and price of the clothing added to the cart, for final review, before checkout.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3426,6 +3449,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The recommended section consists of image cards. It can be used in the product details page to find and entice users on similar clothing. It can also be used with the collections section for added effect.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3500,6 +3527,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The reviews section consists of review stars for the clothing. Can be used in the product details section. Customer review pages can include this section to provide a visual representation of the reviews.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3585,6 +3616,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The size picker section consists of styled links. It can be used in the product details page for selecting a size of the clothing wear. Its scope includes any and all details of the clothing product, like fabric choices, size and colour choices.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -3666,6 +3701,10 @@ Can be used in the footer.</p>
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The toggle section can be used for toggle display and hide. It can used in checkout form page. An example would be billing address the same as shipping address.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
