--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script type="application/json" data-pattern="banners/pop-up-banner"></script>
-  <main class="main" role="main" id="main">
+  <main class="main push" role="main" id="main">
     <script type="application/json" data-pattern="header/header">
       {
         ".current[class]": "tera text-center yellow"
@@ -17,6 +17,9 @@
     <script type="application/json" data-pattern="banners/main-banners"></script>
     <script type="application/json" data-pattern="sections/collection"></script>
   </main>
+  <div class="text-center pad-top-2">
+    <script type="application/json" data-pattern="footer/subscribe-footer"></script>
+  </div>
   <script type="application/json" data-pattern="footer/main-footer"></script>
 
 </body>
