--- a/patterns/footer/subscribe-footer.html
+++ b/patterns/footer/subscribe-footer.html
@@ -16,20 +16,21 @@
 
 <body>
 
-  <div class="subscribe">
+  <div class="subscribe island-2 text-center wrapper">
+    <h6>Subscribe to our newsletter to stay updated on sales, new collections!</h5>
     <form class="inline-block">
-      <div class="email">
-        <label for="email">Email</label>
-        <input type="email" id="email" required aria-describedby="email-error">
+      <div class="email  inline-block">
+        <input class="milli push-1-2" type="email" required placeholder="Email address" aria-describedby="email-error">
         <p class="error-message milli island-1-4 push-0" id="email-error">
           <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
           <span class="icon-label">Please provide a properly formatted email address</span>
         </p>
       </div>
     </form>
-    <div class="light-button island inline-block">
+    <div class="light-button gutter-1-2 inline-block">
       <a class="btn btn-light milli bold" href="#">Subscribe</a>
     </div>
+
   </div>
 
 </body>
