FIx indentation errors
Indentation errors were fixed

--- a/index.html
+++ b/index.html
@@ -1434,21 +1434,21 @@ Use the footer pattern on all pages.</p>
                 </i>
               </button>
               <code><pre id="footer-subscribe-footer-code-sample-copy-chunk">&lt;div class="subscribe island-2 text-center wrapper"&gt;
-  &lt;h6>Subscribe to our newsletter to stay updated on sales, new collections!
-    &lt;form class="inline-block">
-      &lt;div class="email  inline-block">
-        &lt;input class="milli push-1-2" type="email" required placeholder="Email address" aria-describedby="email-error">
-        &lt;p class="error-message milli island-1-4 push-0" id="email-error">
-          &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
-          &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
-        &lt;/p>
-      &lt;/div>
-    &lt;/form>
-    &lt;div class="light-button gutter-1-2 inline-block">
-      &lt;a class="btn btn-light milli bold" href="#">Subscribe&lt;/a>
+  &lt;h6>Subscribe to our newsletter to stay updated on sales, new collections!&lt;/h6>
+  &lt;form class="inline-block">
+    &lt;div class="email inline-block">
+      &lt;input class="milli push-1-2" type="email" required placeholder="Email address" aria-describedby="email-error">
+      &lt;p class="error-message milli island-1-4 push-0" id="email-error">
+        &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
+        &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
+      &lt;/p>
     &lt;/div>
+  &lt;/form>
+  &lt;div class="light-button gutter-1-2 inline-block">
+    &lt;a class="btn btn-light milli bold" href="#">Subscribe&lt;/a>
+  &lt;/div>
 
-  &lt;/h6>&lt;/div>
+&lt;/div>
 </pre></code>
             </div>
           </div>
